force-app/main/default/objects/ccrz__E_RichContentI18N__c/ccrz__E_RichContentI18N__c.object-meta.xml
<CustomObject>
    <label>CC Rich Content I18N</label>
    <nameField>
        <label>CC Rich Content I18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rich Content I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>