force-app/main/default/objects/ccrz__E_RichContentI18N__c/fields/ccrz__CCRichContent__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCRichContent__c</fullName>
    <description>The rich content object that this translated content belongs to</description>
    <label>CC Rich Content</label>
    <referenceTo>ccrz__E_RichContent__c</referenceTo>
    <relationshipLabel>CC Rich Content I18Ns</relationshipLabel>
    <relationshipName>CCRichContentI18Ns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>