force-app/main/default/objects/ccrz__E_RichContentI18N__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>The locale of this translated rich content. Localization follows the normal B2B Commerce fallback rules.</description>
    <label>Locale</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>